# nekifoch.nvim

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.plugin  README.md  build.rs  install.sh  test.sh
.github/: FUNDING.yml
.github/workflows/: autogen.yml  ci.yml  release.yml
doc/: nekifoch.txt
lua/: nekifoch.lua
lua/nekifoch/: check.lua  command.lua  command_func.lua  errors.lua  install.lua  nui_set_font.lua  nui_set_size.lua  utils.lua  which_key.lua  write.lua
plugin/: init.lua
src/: core.rs  error.rs  lib.rs  setup.rs  utils.rs
src/core/: buffer.rs  command.rs  commands.rs  completion.rs  mapping.rs  window.rs
src/core/window/: config.rs
