[package]
name = "nekifoch"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-10", "test", "neovim-nightly"] }
thiserror = "1"
dirs = "5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib"]
